<resources>
    <string name="app_name">Attends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="course_name">Course Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="lecture_attended_count">Lecture(s) Attended</string>
    <string name="lecture_scheduled_count">Lecture(s) Scheduled</string>
    <string name="event_day">Day(s)</string>
    <string name="event_time">Time</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="add_event">Add Event</string>
    <string name="added_events">Added Events</string>
    <string name="event_day_0">Mon</string>
    <string name="event_day_1">Tue</string>
    <string name="event_day_2">Wed</string>
    <string name="event_day_3">Thu</string>
    <string name="event_day_4">Fri</string>
    <string name="event_day_5">Sat</string>
    <string name="event_day_6">Sun</string>
    <string name="event_time_input">Start Time</string>
    <string name="event_time_input_hrs">0 - 23 (hours)</string>
    <string name="event_time_input_min">0 - 59 (minutes)</string>


    <string name="view_course"><u><b>more</b></u></string>
    <string name="add_course"><b>+</b> Course</string>
    <string name="edit_course"><u><b>edit</b></u></string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="view_events"><u>Lecture Events</u> :</string>
    <string name="lecture_ratio"><u>Attendance</u> :</string>
    <string name="scheduled_lectures_label"><u>Scheduled</u> :</string>
    <string name="attended_lectures_label"><u>Attended</u> :</string>
    <string name="instructor_name_label"><u>Instructor</u> :</string>
    <string name="see_scheduled">Schedule</string>

    <string name="update">Update</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>

    <string name="header_name"><u><b>Name</b></u></string>
    <string name="header_instructor_name"><u><b>Instructor</b></u></string>
    <string name="header_lecture_ratio"><u><b>Attendance</b></u></string>
    <string name="header_scheduled_time"><u><b>Scheduled At</b></u></string>
    <string name="day_select_label">Click to Change   ----->   </string>

    <string-array name="event_days_select">
        <item><u>Monday</u></item>
        <item><u>Tuesday</u></item>
        <item><u>Wednesday</u></item>
        <item><u>Thursday</u></item>
        <item><u>Friday</u></item>
        <item><u>Saturday</u></item>
        <item><u>Sunday</u></item>
    </string-array>

</resources>
